# juce-llm

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
juce_llm/: juce_llm.cpp  juce_llm.h
juce_llm/llm/: LLMClient.cpp  LLMClient.h  LLMClientFactory.cpp  LLMClientFactory.h  LLMTypes.cpp  LLMTypes.h  Schema.h
juce_llm/llm/providers/: AnthropicClient.cpp  AnthropicClient.h  GeminiClient.cpp  GeminiClient.h  OpenAIChatClient.cpp  OpenAIChatClient.h  OpenAIResponsesClient.cpp  OpenAIResponsesClient.h
tests/: main.cpp
